# ttt_goes_liquid_haskell

./: .gitignore  README.md  stack.yaml  subertermCriterion_ttt2.txt  term-rewriting.cabal
.stack-work/ghci/0d0fdfe4/: cabal_macros.h
.stack-work/ghci/5420ee2a/: cabal_macros.h
.stack-work/install/x86_64-linux/074ab2d262a44ef43ed8bc72add590592019362b677361cf219e9bd1d8e59ee1/9.2.7/pkgdb/: package.cache  term-rewriting-1.0-43Z9KoqTg9fLxBjGM3sAPC.conf
examples/: ackermann.trs  automatic.py  basenontermination.trs  basetermination.trs  completion.trs  dershowitz.trs  half.trs  int.trs  itertaiveexample.trs  parsing_folder.sh  parsing_xml_trs.py  rpo_counter.trs  shorten.py  sieve.trs  test.trs
examples/Applicative_05/: Ex2PrimRec.xml  Ex2_6_1Composition.xml  Ex2_8_1ConstSubstFix.xml  Ex3Lists.xml  Ex4MapList.xml  Ex5Folding.xml  Ex5Sorting.xml  Ex6Folding.xml  Ex6Recursor.xml  Ex6_11.xml  Ex7OrdinalRec.xml  Ex7Sorting.xml  Ex7_9.xml  Ex8Polymorphic.xml  Ex9Maps.xml  TypeEx3.xml  TypeEx5.xml
examples/Der95/trs_files/: 01.trs  01_result.txt  02.trs  02_result.txt  03.trs  03_result.txt  04.trs  04_result.txt  06.trs  06_result.txt  07.trs  07_result.txt  08.trs  08_result.txt  09.trs  09_result.txt  11.trs  11_result.txt  12.trs  12_result.txt  13.trs  13_result.txt  17.trs  17_result.txt  18.trs  18_result.txt  20.trs  20_result.txt  21.trs  21_result.txt  27.trs  27_result.txt  28.trs  28_result.txt  30.trs  30_result.txt  31.trs  31_result.txt  32.trs  32_result.txt  (+2 more)
examples/Endrullis_06/: pair2hard.xml  pair2simple1.xml  pair2simple2.xml  pair3hard.xml  pair3rotate.xml  pair3swap.xml  quadruple1.xml  quadruple2.xml
examples/GTSSK07/: cade01.xml  cade03.xml  cade04t.xml  cade05t.xml  cade06.xml  cade07.xml  cade08.xml  cade09.xml  cade10.xml  cade11.xml  cade12t.xml  cade13t.xml  cade14.xml  cade15.xml  cade16.xml  cade17.xml
examples/Hydras/: lepper_0.xml  lepper_1.xml  lepper_10.xml  lepper_2.xml  lepper_3.xml  lepper_4.xml  lepper_5.xml  lepper_6.xml  lepper_8.xml  lepper_9.xml
examples/Hydras/trs_files/: lepper_10.trs  lepper_9.trs
examples/Mixed_TRS/: 1.xml  2.xml  3.xml  4.xml  5.xml  6.xml  7.xml  Ex1_Luc04b_GM.xml  beans.xml  div_hard.xml  fossacs.xml  gcd.xml  gcdMinMax.xml  gcd_triple.xml  hydra-Zantema06.xml  hydra.xml  jones1.xml  jones2.xml  jones4.xml  jones5.xml  jones6.xml  minsort.xml  motivation.xml  perfect.xml  perfect2.xml  sigma.xml  test1.xml  while.xml  while2.xml
examples/SK90/trs_files/: 2.01.trs  2.01_result.txt  2.02.trs  2.02_result.txt  2.03.trs  2.03_result.txt  2.04.trs  2.04_result.txt  2.05.trs  2.05_result.txt  2.06.trs  2.06_result.txt  2.07.trs  2.07_result.txt  2.08.trs  2.08_result.txt  2.09.trs  2.09_result.txt  2.10.trs  2.10_result.txt  2.11.trs  2.11_result.txt  2.12.trs  2.12_result.txt  2.13.trs  2.13_result.txt  2.14.trs  2.14_result.txt  2.15.trs  2.15_result.txt  2.16.trs  2.16_result.txt  2.17.trs  2.17_result.txt  2.18.trs  2.18_result.txt  2.19.trs  2.19_result.txt  2.20.trs  2.20_result.txt  (+202 more)
examples/term-results/: ackermann.txt  dershowitz.txt  int.txt  rpo_counter.txt  sieve.txt
src/: DependencyPairs.hs  Main.hs  MainREST.hs  Multiplicity.hs  MySCCGraph.hs  Obsolete.hs  OldTests.hs  Rest.hs  Rules.hs  SubtermCriterion.hs  TTT3TestSets.hs  Tests.hs
term-rewriting-0.4.0.2/: Libraries to set.txt  Main.hs  package_set.ghci  stack.yaml  term-rewriting.cabal
term-rewriting-0.4.0.2/.stack-work/: stack.sqlite3
term-rewriting-0.4.0.2/.stack-work/ghci/1ffe05a3/: cabal_macros.h
term-rewriting-0.4.0.2/.stack-work/ghci/2e675535/: cabal_macros.h
term-rewriting-0.4.0.2/.stack-work/ghci/78d85b75/: cabal_macros.h
term-rewriting-0.4.0.2/.stack-work/ghci/8f171c8a/: cabal_macros.h
term-rewriting-0.4.0.2/.stack-work/ghci/b653a8a1/: cabal_macros.h
term-rewriting-0.4.0.2/.stack-work/ghci/b75fc437/: cabal_macros.h
term-rewriting-0.4.0.2/.stack-work/ghci/c5aa18f2/: cabal_macros.h
term-rewriting-0.4.0.2/.stack-work/ghci/db1dcd0c/: cabal_macros.h
term-rewriting-0.4.0.2/.stack-work/install/50918f85/pkgdb/: package.cache  term-rewriting-0.4.0.2-CWOCtxd26jXCUqEsqAs3Xb.conf
term-rewriting-0.4.0.2/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
term-rewriting-0.4.0.2/dist-newstyle/packagedb/ghc-9.4.8/: package.cache  term-rewriting-0.4.0.2-inplace.conf
term-rewriting-0.4.0.2/src/: DependencyPairs.hs  Main.hs  Multiplicity.hs  MySCCGraph.hs  Rest.hs  Rules.hs  TTT3TestSets.hs  test.trs
term-rewriting-0.4.0.2/src/Data/Rewriting/Rule/: Type.hs
term-rewriting-0.4.0.2/src/Data/Rewriting/Term/: Type.hs
term-rewriting-0.4.0.2/src/Data/SBV/: Client.hs
term-rewriting-0.4.0.2/src/Data/SBV/Core/: Concrete.hs  Data.hs  Model.hs  Operations.hs
term-rewriting-0.4.0.2/src/Data/SBV/SMT/: Utils.hs
term-rewriting-0.4.0.2/src/Data/SBV/Utils/: CrackNum.hs  Lib.hs  Numeric.hs  PrettyNum.hs  SExpr.hs
(+154 files in other folders)
