name:          term-rewriting
version:       1.0
stability:     experimental
author:        Philipp Dablander,
               Luca Maahs
description:   
  Yet Another Term Rewriting Library.
  .
  This library provides basic data types and functionality for first order
  term rewriting.
build-type:    Simple
cabal-version: >= 1.8

source-repository head
    type: git
    location: https://github.com/leichtabgelenkt/ttt_goes_liquid_haskell.git

library
    hs-source-dirs:
        src term-rewriting-0.4.0.2/src
    exposed-modules:
        Data.Rewriting.Term
        Data.Rewriting.Term.Type
        Data.Rewriting.Term.Ops 
        Data.Rewriting.Term.Parse
        Data.Rewriting.Term.Pretty
        Data.Rewriting.Pos
        Data.Rewriting.Problem
        Data.Rewriting.Problem.Type
        Data.Rewriting.Problem.Parse
        Data.Rewriting.Problem.Pretty
        Data.Rewriting.Rule
        Data.Rewriting.Rule.Type
        Data.Rewriting.Rule.Pretty
        Data.Rewriting.Rule.Ops
        Data.Rewriting.Substitution
        Data.Rewriting.Substitution.Type
        Data.Rewriting.Substitution.Parse
        Data.Rewriting.Substitution.Ops
        Data.Rewriting.Substitution.Pretty
        Data.Rewriting.Substitution.Match
        Data.Rewriting.Substitution.Unify
        Data.Rewriting.Rules
        Data.Rewriting.Rules.Rewrite
        Data.Rewriting.Rules.Ops
        Data.Rewriting.Context
        Data.Rewriting.Context.Type
        Data.Rewriting.Context.Ops
        Data.Rewriting.CriticalPair
        Data.Rewriting.CriticalPair.Type
        Data.Rewriting.CriticalPair.Ops
        Data.Graph.SCC
        Data.Graph.ArraySCC
        Data.SBV
        Data.SBV.Client
        Data.SBV.Client.BaseIO
        Data.SBV.Compilers.C
        Data.SBV.Compilers.CodeGen
        Data.SBV.Control.Query
        Data.SBV.Control.Types
        Data.SBV.Control.Utils
        Data.SBV.Core.AlgReals
        Data.SBV.Core.Concrete
        Data.SBV.Core.Data
        Data.SBV.Core.Floating
        Data.SBV.Core.Kind
        Data.SBV.Core.Model
        Data.SBV.Core.Operations
        Data.SBV.Core.Sized
        Data.SBV.Core.SizedFloats
        Data.SBV.Core.Symbolic
        Data.SBV.Internals
        Data.SBV.Lambda
        Data.SBV.List
        Data.SBV.Provers.ABC
        Data.SBV.Provers.Bitwuzla
        Data.SBV.Provers.Boolector
        Data.SBV.Provers.CVC4
        Data.SBV.Provers.CVC5
        Data.SBV.Provers.DReal
        Data.SBV.Provers.MathSAT
        Data.SBV.Provers.OpenSMT
        Data.SBV.Provers.Prover
        Data.SBV.Provers.Yices
        Data.SBV.Provers.Z3
        Data.SBV.SMT.SMT
        Data.SBV.SMT.SMTLib
        Data.SBV.SMT.SMTLib2
        Data.SBV.SMT.SMTLibNames
        Data.SBV.SMT.Utils
        Data.SBV.Trans
        Data.SBV.Trans.Control
        Data.SBV.Tuple
        Data.SBV.Utils.CrackNum
        Data.SBV.Utils.ExtractIO
        Data.SBV.Utils.Lib
        Data.SBV.Utils.Numeric
        Data.SBV.Utils.PrettyNum
        Data.SBV.Utils.SExpr
        Data.SBV.Utils.TDiff

    other-modules:
        Data.Rewriting.Utils
        Data.Rewriting.Utils.Parse
    build-depends:
        containers >= 0.3 && < 0.7,
        multiset >= 0.2 && < 0.4,
        parsec >= 3.1.6 && < 3.2,
        union-find-array >= 0.1 && < 0.2,
        array >= 0.3 && < 0.6,
        ansi-wl-pprint >= 0.6 && < 0.7,
        mtl >= 1.1 && < 2.3,
        base >= 4.16 && < 5,
        deepseq >= 1.4.6.1,
        random >= 1.2.1.1,
        QuickCheck >= 2.14.2,
        syb >= 0.7.2.3,
        transformers >= 0.5.6.2,
        libBF >= 0.6.7,
        time >= 1.11.1.1,
        text >= 1.2.5.0,
        uniplate >= 1.6.13,
        process >= 1.6.16.0,
        directory >= 1.3.6.2,
        async >= 2.2.4,
        template-haskell >= 2.18.0.0,
        pretty >= 1.1.3.6,
        filepath >= 1.4.2.2,
        bytestring, 
        clock >= 0.8.4
    extensions:
        TypeSynonymInstances
        BangPatterns
        PatternGuards

executable subterm-criterion
    hs-source-dirs:
        src
    main-is: 
        Main.hs
    build-depends:
        base >= 4.16 && < 5,
        term-rewriting,
        containers >= 0.3 && < 0.7,
        multiset >= 0.2 && < 0.4,
        parsec >= 3.1.6 && < 3.2,
        union-find-array >= 0.1 && < 0.2,
        array >= 0.3 && < 0.6,
        ansi-wl-pprint >= 0.6 && < 0.7,
        mtl >= 1.1 && < 2.3,
        deepseq >= 1.4.6.1,
        random >= 1.2.1.1,
        QuickCheck >= 2.14.2,
        syb >= 0.7.2.3,
        transformers >= 0.5.6.2,
        libBF >= 0.6.7,
        time >= 1.11.1.1,
        text >= 1.2.5.0,
        uniplate >= 1.6.13,
        process >= 1.6.16.0,
        directory >= 1.3.6.2,
        async >= 2.2.4,
        template-haskell >= 2.18.0.0,
        pretty >= 1.1.3.6,
        filepath >= 1.4.2.2,
        bytestring, 
        clock >= 0.8.4
    ghc-options: 
        -Wall

